--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">rn_redux_4cursos</string>
+    <string name="app_name">redux-4vientos-cursos-reactnative</string>
 </resources>
